[package]
name = "wagyan"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "CLI tool to convert text into extruded ASCII STL meshes (TTF/OTF supported)"
repository = "https://github.com/dlwr/wagyan"
readme = "README.md"
keywords = ["stl", "3d", "mesh", "font", "cli"]
include = ["src/**", "assets/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
lyon_path = "1.0"
lyon_tessellation = "1.0"
stl_io = "0.4"
ttf-parser = "0.21"

[dev-dependencies]
assert_cmd = "2.0"
